# cycle_perfect_gameboy

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  gameboy_emulator_plan.md
.github/: constants.env
cmake/: Bloaty.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  Lizard.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
docs/: blargg_test_plan.md
fuzz_test/: CMakeLists.txt
include/cycle_perfect_gameboy/: sample_library.hpp
include/cycle_perfect_gameboy/cartridge/: cartridge_header.hpp  rom.hpp
include/cycle_perfect_gameboy/core/: types.hpp
include/cycle_perfect_gameboy/cpu/: cpu.hpp  flags.hpp  instructions.hpp  load_instructions.hpp  registers.hpp
include/cycle_perfect_gameboy/debug/: logger.hpp
include/cycle_perfect_gameboy/memory/: memory_interface.hpp  memory_map.hpp  ram.hpp
src/: CMakeLists.txt
src/cycle_perfect_gameboy/: CMakeLists.txt
src/cycle_perfect_gameboy/cartridge/: rom.cpp
src/cycle_perfect_gameboy/core/: types.cpp
src/cycle_perfect_gameboy/cpu/: cpu.cpp
src/cycle_perfect_gameboy/memory/: memory_map.cpp
src/cycle_perfect_gameboy/system/: gameboy.cpp  interrupt_controller.cpp  timer.cpp
src/cycle_perfect_gameboy_emu/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  core_types_test.cpp  cpu_load_instructions_test.cpp  integration_blargg_test.cpp  load_instruction_debug_test.cpp  system_interrupt_test.cpp  system_timer_test.cpp  tests.cpp
(+3 files in other folders)
